--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "dependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
-    "xml2js": "^0.4.23"
+    "light-server": "^2.9.1",
+    "svgdom": "^0.1.8",
+    "xml-js": "^1.6.11"
+  },
+  "scripts": {
+    "generate": "node sentence-diagrammer.js",
+    "dev": "light-server -s . -p 8080 -w '*.js, *.html # npm run generate'"
   }
 }
